# Accel-Video-Pipe

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  FORMAT.md  NOTES.md  README.md  ROADMAP.md  hand-keypoint.cpp  init.bat  multi-model.cpp  palm-detection.cpp  speed-bench.cpp  video-analysis.cpp
Notes/: ThesisTasks.md  视频处理优化.md
avp_automation/: avp_automation.py  run.py  utils.py
avp_example/: CMakeLists.txt  multi_hand_tracking.cpp  multi_hand_tracking.yaml  multi_hand_tracking_no_loopback.yaml  multi_hand_tracking_test.yaml  pose_estimation.cpp  pose_estimation.yaml  yolov3.cpp  yolov3.yaml
avp_template/: avp_build.bat  avp_build.sh  avp_build_and_run.sh  avp_run.bat  avp_run.sh  default-configs.yaml  template_cmakelists.txt
avp_test/: CMakeLists.txt  cv_trans_test.cpp  multi_threading.cpp  nn_infer_test.cpp  packet_test.cpp  template_proc_test.cpp  util_proc_test.cpp
include/: default-configs.yaml
include/avpipe/: avpipe.hpp  base.hpp  cv_compute.hpp  cvmat_package.hpp  helper_func.hpp  tensor_compute.hpp  tensor_package.hpp  util_compute.hpp
include/cv_compute/: cv_display.hpp  cv_rendering.hpp  cv_stream_src.hpp  cv_transfermation.hpp  cv_transformation.hpp
include/nn_inference/: libtorch.hpp  nn_inference.hpp  onnx_runtime.hpp  openvino.hpp
include/tensor_compute/: det_postprocess.hpp  libtorch.hpp  nn_inference.hpp  onnx_runtime.hpp  openvino.hpp  tensor_utils.hpp  tensorrt.hpp
include/tensor_compute/tensorrt_util/: buffers.h
python/: __init__.py  avp_automation.py  configs.py  utils.py
